--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "clean": "echo \"Cleaning...\" && gulp clean",
         "test": "echo \"Testing...\" && npm run build && nyc mocha",
         "dev": "echo \"Developing...\" && nodemon",
-        "start":
-            "echo \"Starting...\" && npm run build && ts-node --project tsconfig.json src/index.ts",
+        "start": "echo \"Starting...\" && npm run build && ts-node --project tsconfig.json src/index.ts",
         "publish": "npm publish dist/swagger-express-ts"
     },
     "repository": {
@@ -51,6 +50,7 @@
         "@types/lodash": "^4.14.109",
         "body-parser": "^1.18.3",
         "compression": "^1.7.2",
+        "event-stream": "^4.0.1",
         "express": "^4.16.4",
         "helmet": "^3.12.1",
         "inversify": "^4.13.0",
@@ -83,19 +83,39 @@
         "typescript": "^3.1.3"
     },
     "nyc": {
-        "include": ["src/**/*.ts", "lib/swagger-express-ts-lib/src/**/*.ts"],
-        "exclude": ["src/index.ts"],
-        "extension": [".ts"],
-        "require": ["ts-node/register"],
-        "reporter": ["html"],
+        "include": [
+            "src/**/*.ts",
+            "lib/swagger-express-ts-lib/src/**/*.ts"
+        ],
+        "exclude": [
+            "src/index.ts"
+        ],
+        "extension": [
+            ".ts"
+        ],
+        "require": [
+            "ts-node/register"
+        ],
+        "reporter": [
+            "html"
+        ],
         "sourceMap": true,
         "instrument": true
     },
     "nodemonConfig": {
         "restartable": "rs",
-        "watch": ["src/**/*.ts", "lib/**/*.ts"],
+        "watch": [
+            "src/**/*.ts",
+            "lib/**/*.ts"
+        ],
         "ext": "ts",
-        "ignore": ["test/*", "wiki/*", "swagger/*", "node_modules/*", "dist/*"],
+        "ignore": [
+            "test/*",
+            "wiki/*",
+            "swagger/*",
+            "node_modules/*",
+            "dist/*"
+        ],
         "delay": "2500",
         "exec": "gulp build && ts-node --project tsconfig.json src/index.ts"
     },
